--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-
-<!--[if IE 7 ]><html class="ie7"><![endif]--> 
-<!--[if !(IE 7)]><!--><html><!--<![endif]-->
-
+<html>
 <head>
 <title>Max Olander</title>
 <meta charset="utf-8">
 <meta name="description" content="Web developer, musician and filmmaker currently residing in Stockholm, Sweden. Yay!">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-<link rel="stylesheet" media="all" href="/screen.css">
-<link rel="shortcut icon" type="image/ico" href="/favicon.ico">
-<!--[if lt IE 9]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+<link rel="stylesheet" media="all" href="screen.css">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -27,34 +21,28 @@ pageTracker._trackPageview();
 
 <body>
 	
-  <header id="hd">
-    <img src="max.png" alt="Max Olander">
-    <h1>Max Olander</h1>
-  </header>
+	<img src="max.png" alt="Max Olander">
 
-  <section id="contact">		
-    <ul>
-      <li><a href="mailto:max.olander@gmail.com">Email</a></li>
-      <li><a href="http://www.twitter.com/maxolander">Twitter</a></li>
-    </ul>
-  </section>
-
-
-  <section id="projects">
-
-    <h2>Projects</h2>
-
-    <ul>
-      <li><a href="http://nonfict.com">Nonfict</a> — A handpicked collection of great documentaries</li>
-      <li><a href="/readlist">Readlist</a> — Recommended reading from my Instapaper feed</li>
-      <li><a href="http://dslrd.com">DSLRd</a> — Listing the films made using DSLR cameras</li>
-    </ul>
-
-  </section>
-
+	<h1>Max Olander</h1>
+	
+	<table>
+		<tr>
+			<th>Email</th>
+			<td><a href="mailto:max.olander@gmail.com">max.olander@gmail.com</a></td>
+		</tr>
+		<tr>
+			<th>Twitter</th>
+			<td><a href="https://twitter.com/maxolander">@maxolander</a></td>
+		</tr>
+		<tr>
+			<th>Github</th>
+			<td><a href="https://github.com/maxolander">/maxolander</a></td>
+		</tr>
+	</table>
 	
 
-	
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="all.js"></script>	
 </body>
 
 </html>
