--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="description" content="Web developer, musician and filmmaker currently residing in Stockholm, Sweden. Yay!">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-<link rel="stylesheet" media="all" href="screen.css">
+<link rel="stylesheet" media="all" href="screen.css?v3">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
 
 <script type="text/javascript">
@@ -40,9 +40,6 @@ pageTracker._trackPageview();
 		</tr>
 	</table>
 	
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="all.js"></script>	
 </body>
 
 </html>
